# mrh_app_base

./: .gitignore  AUTHORS.txt  CMakeLists.txt  LICENSE.txt  README.md  README.txt  VERSION.txt
include/: include.txt
lib/: lib.txt
pkg/: Configuration.conf
pkg/ApplicationName/Default/: ApplicationName.txt
pkg/SharedObject/: SharedObject.txt
res/pkg/: Configuration.conf
res/pkg/ApplicationName/de_DE/: ApplicationName.txt
res/pkg/FSRoot/: FSRoot.txt
res/pkg/LaunchTrigger/en_US/: LaunchTrigger.mrhit
src/App/: Main.cpp  Revision.h
src/App/Module/HelloWorld/: HelloWorld.cpp  HelloWorld.h
src/Service/: Main.cpp
